refactor: Integrate with FE to fetch mail from the database